# faetter_BR-project

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
.github/workflows/: build.yml
components/counter/: CMakeLists.txt  counter.c
components/counter/include/: counter.h
components/counter/test/: CMakeLists.txt  test_counter.c
main/: CMakeLists.txt  faetter_BR-project.c
test_app/: CMakeLists.txt  sdkconfig
test_app/main/: CMakeLists.txt  test_app_main.c  test_counter.c
